--- a/alfred-backend/package.json
+++ b/alfred-backend/package.json
@@ -16,14 +16,21 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "joi": "^17.13.3",
+    "mongodb": "^6.6.0",
+    "mongoose": "^8.6.0",
     "morgan": "^1.10.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^24.3.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
     "@typescript-eslint/parser": "^8.42.0",
     "eslint": "^9.34.0",
