--- a/alfred-frontend/package.json
+++ b/alfred-frontend/package.json
@@ -11,8 +11,17 @@
     "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.11.0",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.468.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
+    "recharts": "^2.12.7",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
